# AWS-SpeechRecognition

./: .gitignore  AWS-SpeechRecognition.cpp  AWS-SpeechRecognition.h  AWS-SpeechRecognition.sln  AWS-SpeechRecognition.vcxproj  AWS-SpeechRecognition.vcxproj.filters  CMakeLists.txt  README.md  audio-capture.cpp  cmake_install.cmake
